tests/sem/error/return_funcall.c
int idinahui() {
	return 1919;
}

int main() {
	if (114514) {
		idinahui();
	}
}
